@@ -15,6 +15,7 @@ Date: ???
     - Reverted ore crystallization recipe icons
     - Made Logistic System take pink science rather than yellow science (when possible)
     - Added support for Angel's Industries mod
+    - Rebalanced salt to saline water recipe
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
